<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    android:orientation="vertical"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.example.aultra.greenwaveproject.SettingActivity"
    tools:showIn="@layout/app_bar_setting">


    <TextView
        android:id="@+id/tv_username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/username"
        android:textColor="@color/gray"
        android:textSize="20sp"
        android:layout_marginLeft="16dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="50dp"
        app:layout_constraintRight_toLeftOf="@+id/guideline"
        android:layout_marginRight="60dp"
        app:layout_constraintHorizontal_bias="0.52" />

    <EditText
        android:id="@+id/et_username"
        android:layout_width="330dp"
        android:layout_height="50dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/username"
        android:textColor="@android:color/white"
        android:textSize="20sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="16dp"
        android:textColorHint="@android:color/white"
        android:backgroundTint="@android:color/white"

        app:layout_constraintTop_toBottomOf="@+id/tv_username" />


    <TextView
        android:id="@+id/tv_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/password"
        android:textColor="@color/gray"
        android:textSize="20sp"
        android:layout_marginLeft="0dp"
        app:layout_constraintLeft_toLeftOf="@+id/tv_username"
        android:layout_marginTop="32dp"
        app:layout_constraintTop_toBottomOf="@+id/et_username" />


    <EditText
        android:id="@+id/et_password"
        android:layout_width="330dp"
        android:layout_height="50dp"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPersonName"
        android:textColor="@android:color/white"
        android:backgroundTint="@android:color/white"
        android:textColorHint="@android:color/white"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintBottom_creator="1"
        tools:layout_constraintLeft_creator="1"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@+id/tv_password"
        android:layout_marginLeft="0dp"
        app:layout_constraintLeft_toLeftOf="@+id/et_username" />

    <TextView
        android:id="@+id/tv_notification"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/notification"
        android:textColor="@color/gray"
        android:textSize="20sp"
        android:layout_marginTop="50dp"
        app:layout_constraintTop_toBottomOf="@+id/et_password"
        android:layout_marginLeft="0dp"
        app:layout_constraintLeft_toLeftOf="@+id/tv_password" />

    <Switch
        android:id="@+id/switch1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:ignore="RtlHardcoded"
        android:layout_marginRight="0dp"
        app:layout_constraintRight_toRightOf="@+id/et_password"
        app:layout_constraintTop_toTopOf="@+id/tv_notification"
        android:layout_marginTop="0dp" />

    <Button
        android:id="@+id/btn_update"
        android:layout_width="100dp"
        android:layout_height="45dp"
        android:background="@color/green"
        android:text="@string/update"
        android:textColor="@android:color/white"
        android:layout_marginRight="0dp"
        app:layout_constraintRight_toRightOf="@+id/et_password"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="50dp"
        android:layout_marginTop="50dp"
        app:layout_constraintTop_toBottomOf="@+id/switch1" />

    <android.support.constraint.Guideline
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/guideline"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.5" />


</android.support.constraint.ConstraintLayout>
