<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    tools:context="com.example.bb.wave.LoginActivity"
    android:orientation="vertical">

    <TextView
        android:id="@+id/Green"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="32dp"
        android:layout_marginTop="60dp"
        android:fontFamily="cursive"
        android:text="Green"
        android:textColor="@color/green"
        android:textSize="50dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/Wave"
        app:layout_constraintHorizontal_bias="0.852"
        android:layout_marginStart="32dp" />

    <TextView
        android:id="@+id/Wave"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="70dp"
        android:layout_marginRight="32dp"
        android:fontFamily="cursive"
        android:text="Wave"
        android:textColor="@android:color/white"
        android:textSize="50dp"
        app:layout_constraintHorizontal_bias="0.618"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@+id/Green"
        android:layout_marginStart="70dp"
        android:layout_marginEnd="7dp"
        android:layout_marginTop="0dp" />


    <TextView
        android:id="@+id/tv_username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/username"
        android:textColor="@color/gray"
        android:textSize="20sp"
        android:layout_marginLeft="20dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="40dp"
        app:layout_constraintTop_toBottomOf="@+id/Green" />

    <EditText
        android:id="@+id/et_username"
        android:layout_width="330dp"
        android:layout_height="50dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/username"
        android:textSize="20dp"
        app:layout_constraintHorizontal_bias="0.545"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="16dp"
        android:textColor="@android:color/white"
        android:textColorHint="@android:color/white"
        android:backgroundTint="@android:color/white"
        app:layout_constraintTop_toBottomOf="@+id/tv_username"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp" />

    <TextView
        android:id="@+id/tv_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/password"
        android:textColor="@color/gray"
        android:textSize="20sp"
        android:layout_marginLeft="0dp"
        app:layout_constraintLeft_toLeftOf="@+id/tv_username"
        android:layout_marginTop="32dp"
        app:layout_constraintTop_toBottomOf="@+id/et_username" />

    <EditText
        android:id="@+id/et_password"
        android:layout_width="330dp"
        android:layout_height="50dp"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:textSize="20dp"
        android:textColor="@android:color/white"
        android:backgroundTint="@android:color/white"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="@+id/et_username"
        app:layout_constraintRight_toRightOf="@+id/et_username"
        android:textColorHint="@android:color/white"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@+id/tv_password" />

    <Button
        android:id="@+id/btn_login"
        android:layout_width="100dp"
        android:layout_height="45dp"
        android:layout_marginTop="32dp"
        android:background="@color/green"
        android:text="@string/login"
        android:textColor="@android:color/white"
        app:layout_constraintRight_toRightOf="@+id/et_password"
        app:layout_constraintTop_toBottomOf="@+id/et_password"
        android:layout_marginRight="0dp" />



    <TextView
        android:id="@+id/tv_signup"
        android:layout_width="180dp"
        android:layout_height="40dp"
        android:text="@string/create"
        android:textColor="@android:color/white"
        android:textSize="18dp"
        android:layout_marginTop="15dp"
        app:layout_constraintTop_toBottomOf="@+id/btn_login"
        android:layout_marginRight="0dp"
        app:layout_constraintRight_toRightOf="@+id/btn_login" />

</android.support.constraint.ConstraintLayout>
