<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    android:orientation="vertical"
    tools:context="com.example.bb.wave.SignupActivity">

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="70dp"
        android:layout_marginRight="32dp"
        android:fontFamily="cursive"
        android:text="Wave"
        android:textColor="@android:color/white"
        android:textSize="50dp"
        app:layout_constraintHorizontal_bias="0.618"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginStart="70dp"
        android:layout_marginEnd="7dp"
        tools:layout_editor_absoluteY="16dp" />



    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="32dp"
        android:layout_marginTop="16dp"
        android:fontFamily="cursive"
        android:text="Green"
        android:textColor="@color/green"
        android:textSize="50dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/textView5"
        app:layout_constraintHorizontal_bias="0.852"
        android:layout_marginStart="32dp" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="70dp"
        android:layout_marginRight="32dp"
        android:fontFamily="cursive"
        android:text="Wave"
        android:textColor="@android:color/white"
        android:textSize="50dp"
        app:layout_constraintHorizontal_bias="0.618"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginStart="70dp"
        android:layout_marginEnd="7dp"
        tools:layout_editor_absoluteY="16dp" />



    <TextView
        android:id="@+id/tv_username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/username"
        android:textColor="@color/gray"
        android:textSize="20sp"
        android:layout_marginLeft="20dp"
        app:layout_constraintLeft_toLeftOf="parent"
        tools:layout_editor_absoluteY="92dp" />

    <EditText
        android:id="@+id/et_username"
        android:layout_width="330dp"
        android:layout_height="50dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/username"
        android:textColor="@android:color/white"
        android:textSize="20dp"
        app:layout_constraintHorizontal_bias="0.545"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="4dp"
        android:textColorHint="@android:color/white"
        android:backgroundTint="@android:color/white"

        app:layout_constraintTop_toBottomOf="@+id/tv_username" />

    <TextView
        android:id="@+id/tv_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/email"
        android:textColor="@color/gray"
        android:textSize="20sp"
        android:layout_marginLeft="0dp"
        app:layout_constraintLeft_toLeftOf="@+id/tv_username"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@+id/et_username" />

    <EditText
        android:id="@+id/et_email"
        android:layout_width="330dp"
        android:layout_height="50dp"
        android:ems="10"
        android:hint="@string/email"
        android:inputType="textPersonName"
        android:backgroundTint="@color/White"
        android:singleLine="false"
        android:textColor="@color/White"
        android:textColorHint="@color/White"
        tools:layout_constraintBottom_creator="1"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintLeft_toLeftOf="@+id/et_username"
        android:layout_marginLeft="0dp"
        android:layout_marginRight="0dp"
        app:layout_constraintRight_toRightOf="@+id/et_username"
        android:layout_marginTop="4dp"
        app:layout_constraintTop_toBottomOf="@+id/tv_email"
        app:layout_constraintHorizontal_bias="0.0" />



    <TextView
        android:id="@+id/tv_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/password"
        android:textColor="@color/gray"
        android:textSize="20sp"
        android:layout_marginTop="4dp"
        app:layout_constraintTop_toBottomOf="@+id/et_email"
        android:layout_marginLeft="0dp"
        app:layout_constraintLeft_toLeftOf="@+id/tv_email" />

    <EditText
        android:id="@+id/et_password"
        android:layout_width="330dp"
        android:layout_height="50dp"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:singleLine="false"
        android:textColor="@color/White"
        android:backgroundTint="@color/White"
        android:textColorHint="@color/White"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintBottom_creator="1"
        app:layout_constraintRight_toRightOf="@+id/et_email"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintLeft_toLeftOf="@+id/et_email"
        app:layout_constraintHorizontal_bias="0.0"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/tv_password" />


    <TextView
        android:id="@+id/tv_conpassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/conpassword"
        android:textColor="@color/gray"
        android:textSize="20sp"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@+id/et_password"
        android:layout_marginLeft="0dp"
        app:layout_constraintLeft_toLeftOf="@+id/tv_password" />

    <EditText
        android:id="@+id/et_cofnirmpassword"
        android:layout_width="330dp"
        android:layout_height="50dp"
        android:ems="10"
        android:hint="Confirm Pawssword"
        android:inputType="textPassword"
        android:backgroundTint="@android:color/white"
        android:textColorHint="@android:color/white"
        app:layout_constraintRight_toRightOf="@+id/et_password"
        app:layout_constraintLeft_toLeftOf="@+id/et_password"
        app:layout_constraintHorizontal_bias="0.0"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/tv_conpassword" />

    <Button
        android:id="@+id/btn_signup"
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:backgroundTint="@color/green"
        android:text="Signup"
        android:textColor="@android:color/white"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/et_cofnirmpassword"
        android:layout_marginRight="0dp"
        app:layout_constraintRight_toRightOf="@+id/et_cofnirmpassword" />


</android.support.constraint.ConstraintLayout>
